--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,8 +1,8 @@
 .typography {
   --typography-body: theme(colors.gray.600);
   --typography-headings: theme(colors.gray.700);
-  --typography-quotes: theme(colors.gray.500);
-  --typography-quotes-border: theme(colors.gray.200);
+  --typography-quotes: theme(colors.yellow.500);
+  --typography-quotes-border: theme(colors.yellow.500 / 0.4);
   --typography-links: theme(colors.yellow.800);
   --typography-link-hover: theme(colors.yellow.600);
   --typography-link-underline: theme(colors.yellow.400 / 0.4);
@@ -32,8 +32,8 @@
   .dark & {
     --typography-body: theme(colors.white);
     --typography-headings: theme(colors.white);
-    --typography-quotes: theme(colors.gray.400);
-    --typography-quotes-border: theme(colors.gray.800);
+    --typography-quotes: theme(colors.yellow.200);
+    --typography-quotes-border: theme(colors.yellow.500 / 0.4);
     --typography-links: theme(colors.yellow.400);
     --typography-link-hover: theme(colors.white);
     --typography-link-underline: theme(colors.yellow.400 / 0.4);
